bugfix: flexbox overflow

--- a/css/services.css
+++ b/css/services.css
@@ -1,3 +1,7 @@
+main{
+    flex-direction: column;
+}
+
 .services-container{
     width: 100%;
     height: 100%;
@@ -50,11 +54,12 @@
     }
     
     .services-container{
+        height: auto;
         flex-direction: column;
         flex-wrap: nowrap;
     }
 
     .service{
-        width: 80%; 
+        width: 90%;
     }
 }
