--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ main{
     font-size: 52px;
     font-weight: 500;
     margin: 0;
-    padding: 00;
+    padding: 0;
 }
 
 .description{
